# fide-glicko

./: .gitignore  .gitmodules  README.md  collect_player_data.py  countries.py  download_historical_player_data.py  download_player_data.py  extract_tournament_data.py  fide_scraper.py  get_player_profile_data.py  glicko2.c  glicko2.py  process_fide_rating_list.c  process_fide_rating_list.py  remove_duplicates.cpp  remove_duplicates.py  run_glicko.py  run_pipeline.py  run_script.py  test_file_generator.py  tournament_scraper.py
cpp/include/: glicko.h  glicko2.h  util.h
cpp/src/: glicko.cpp  glicko2.cpp
go/: main.go  player.go  tournament.go  tournament_list.go  util.go
random/: read_rating_list.py  read_rating_list_helper.py
rust/pull_sqlite/: Cargo.toml
rust/pull_sqlite/src/: main.rs
rust/tester/: Cargo.toml
rust/tester/src/: main.rs
src/: aggregate_player_ids.py  collect_player_data.py  download_player_data.py  extract_tournament_data.py  fide_scraper.py  glicko2.py  process_fide_rating_list.py  process_game_data.py  remove_duplicates.py  run_glicko.py  run_pipeline.py  scrape_calculations.py  tournament_scraper.py
src/aws/: config.py  data_manager.py  s3_utils.py  upload_to_s3.py
tester/: Cargo.toml
top_rating_lists/Blitz/: girls.txt  juniors.txt  open.txt  women.txt
top_rating_lists/Blitz/2012-01/: girls.txt  juniors.txt  open.txt  women.txt
top_rating_lists/Blitz/2012-02/: girls.txt  juniors.txt  (+2 more)
top_rating_lists/Rapid/: girls.txt  juniors.txt  open.txt  women.txt
top_rating_lists/Standard/: girls.txt  juniors.txt  open.txt  women.txt
(+214252 files in other folders)
