[package]
name = "pull_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.0.26-alpha"   # Correct version for the modular AWS SDK
aws-sdk-s3 = "0.0.26-alpha"   # Correct version for the S3 SDK
parquet = "7.0.0"                    # Apache Parquet crate for reading Parquet files
tokio = { version = "1.28.2", features = ["full"] }  # Asynchronous runtime with full features
futures-util = "0.3.28"             # Utilities for working with futures
log = "0.4.20"                      # Logging facade
simplelog = "0.12.0"                # Simple logging implementation
indicatif = "0.17.3"                # Progress bars
serde = { version = "1.0.188", features = ["derive"] }  # Serialization/deserialization with derive macros
serde_json = "1.0.103"              # JSON support for Serde