[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[dependencies]
statrs = "0.15"
csv = "1.1"
aws-config = "0.0.26-alpha"   # Correct version for the modular AWS SDK
aws-sdk-s3 = "0.0.26-alpha"   # Correct version for the S3 SDK
rusqlite = { version = "0.28.0", features = ["bundled"] } # SQLite
tokio = { version = "1", features = ["full"] }  # Async runtime